member.yml
apiVersion: v1
kind: Namespace
metadata:
  name:  myapp
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: member
  namespace: myapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: member
  template:
    metadata:
      labels: 
        app: member
    spec:
      containers:
      - name: member
        image: testwoman/member:latest
        volumeMounts:
        - name: config
          mountPath: "/etc/config"
          
      volumes:
        - name: config
          configMap:
            name: configtest3
          
---
kind: Service
apiVersion: v1
metadata:
  name:  member
  namespace: myapp             
spec:
  selector:
    app:  member
  type:  NodePort
  ports:
  - name:  member
    port:  8080
    targetPort:  8080
