task-query.yml
apiVersion: v1
kind: Namespace
metadata:
  name: myapp
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: task-query
  namespace: myapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: task-query
  template:
    metadata:
      labels:
        app: task-query
    spec:
      containers:
        - name: task-query
          image: ktk8916/task-query:latest
---
kind: Service
apiVersion: v1
metadata:
  name: task-query
  namespace: myapp
spec:
  selector:
    app: task-query
  type: NodePort
  ports:
    - name: task-query
      port: 8100
      targetPort: 8080
