web.yml
apiVersion: v1
kind: Namespace
metadata:
  name:  myapp
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
  namespace: myapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels: 
        app: web
    spec:
      containers:
      - name: web
        image: testwoman/web:latest

---
kind: Service
apiVersion: v1
metadata:
  name:  web
  namespace: myapp             
spec:
  selector:
    app:  web
  type:  NodePort
  ports:
  - name:  web
    port:  3000
    targetPort:  3000
